--- a/src/styles/_SnakeGame.scss
+++ b/src/styles/_SnakeGame.scss
@@ -2,7 +2,10 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  
+}
+
+body {
+  background-color: rgb(135, 132, 132);
 }
 
 .game-board {
